--- a/SanqiGameC/4. 战斗系统问题梳理和修复计划.md
+++ b/SanqiGameC/4. 战斗系统问题梳理和修复计划.md
@@ -83,9 +83,27 @@
 
 **完成状态：** 🔄 部分完成，需要统一管理机制
 
-### 3. 子弹击中问题（最高优先级）🚨 新发现
+### 3. 塔索敌功能问题（最高优先级）🚨 新发现
 
-#### 3.1 塔子弹速度设置为0
+#### 3.1 塔攻击目标选择问题
+**问题描述：**
+- 所有塔都会同时攻击同一个目标，而不是分别攻击离自己最近的目标
+- `FindNearestEnemyInRange()`方法中的所有代码都被注释掉了
+- `OnDetectCollider()`方法每次检测到敌人都会立即攻击，没有攻击冷却时间控制
+
+**影响：**
+- 塔的攻击效率低下，多个塔攻击同一个目标
+- 敌人分布不均匀时，某些区域的敌人可能被忽略
+- 游戏平衡性受影响
+
+**根本原因：**
+- 塔的目标选择逻辑被注释掉
+- 缺乏"最近敌人"的选择机制
+- 攻击冷却时间控制不当
+
+**完成状态：** ❌ 未修复，这是当前最高优先级问题
+
+#### 3.2 塔子弹速度设置为0
 **问题描述：**
 - 在Tower.cs的FireAt方法中，子弹初始化时速度参数被硬编码为0
 - 代码：`bulletScript.Initialize(direction, 0, gameObject, target, bulletConfig.TargetTags, towerData.GetPhysicAttack(level));`
@@ -166,9 +184,68 @@
 
 ## 修复计划
 
-### 第一阶段：攻击距离和频率统一规则（最高优先级）
+### 第一阶段：塔索敌功能修复（最高优先级）
 
-#### 1.1 攻击距离统一规则设计
+#### 1.1 塔目标选择逻辑修复
+
+**核心原则：**
+1. **最近敌人优先**：每个塔攻击离自己最近的敌人
+2. **攻击范围限制**：只攻击攻击范围内的敌人
+3. **目标唯一性**：避免多个塔攻击同一个目标
+
+**目标选择规则：**
+- 使用事件驱动机制，只在敌人状态变化时重新评估
+- 选择距离最近的敌人作为目标
+- 如果出现更近的目标，立即切换攻击目标
+- 过滤掉已死亡或无效的敌人
+- 使用空间分区优化，减少不必要的距离计算
+
+**攻击冷却控制：**
+- 每个塔独立的攻击冷却时间
+- 基于塔的攻击速度配置（1/攻击速度）
+- 每次攻击前重新评估目标优先级
+
+#### 1.2 塔攻击系统重构
+
+**核心组件：**
+1. **目标管理器**：管理每个塔的当前目标
+2. **攻击冷却器**：控制每个塔的攻击频率
+3. **目标选择器**：实现最近敌人选择算法
+
+**系统架构：**
+- TowerTargetManager：管理塔的目标状态
+- TowerAttackCooldown：管理攻击冷却
+- EnemyTargetSelector：实现目标选择逻辑
+
+#### 1.3 实施步骤
+
+**第一步：修复FindNearestEnemyInRange方法**
+- 取消注释并实现最近敌人选择逻辑
+- 添加攻击范围验证
+- 实现目标有效性检查
+
+**第二步：修复OnDetectCollider方法**
+- 添加攻击冷却时间控制
+- 实现事件驱动的目标选择（只在状态变化时重新评估）
+- 实现目标切换机制（出现更近目标时切换）
+- 添加性能优化（空间分区、缓存机制）
+
+**第三步：实现目标管理**
+- 创建TowerTargetManager组件
+- 管理每个塔的当前目标
+- 实现事件驱动的目标更新机制
+- 添加空间分区优化
+
+**第四步：测试验证**
+- 测试多个塔同时攻击不同目标
+- 验证攻击冷却时间控制
+- 测试塔动态切换攻击目标（出现更近目标时）
+- 测试目标优先级实时评估
+- 性能测试：验证优化效果（目标：减少80%的距离计算）
+
+### 第二阶段：攻击距离和频率统一规则（高优先级）
+
+#### 2.1 攻击距离统一规则设计
 
 **核心原则：**
 1. **单一数据源**：攻击距离只在一个地方配置
@@ -185,7 +262,7 @@
 - 获取实际攻击距离的方法
 - 配置一致性验证
 
-#### 1.2 攻击频率统一规则设计
+#### 2.2 攻击频率统一规则设计
 
 **核心原则：**
 1. **明确概念**：攻击间隔（秒）vs 攻击速度（次/秒）
@@ -202,7 +279,7 @@
 - 获取实际攻击间隔的方法
 - 配置一致性验证
 
-#### 1.3 子弹速度与攻击距离匹配规则
+#### 2.3 子弹速度与攻击距离匹配规则
 
 **核心原则：**
 1. **子弹速度独立**：子弹速度不影响攻击距离判断
@@ -214,7 +291,7 @@
 - 推荐的子弹配置生成
 - 自动配置优化建议
 
-#### 1.4 实施步骤
+#### 2.4 实施步骤
 
 **第一步：统一配置接口**
 - 创建AttackRangeManager统一管理攻击距离
@@ -276,7 +353,13 @@
 3. **敌人失败状态实现** ✅
 
 ### 最高优先级（立即修复）
-4. **子弹击中问题修复**
+4. **塔索敌功能修复**
+   - 修复Tower.cs中FindNearestEnemyInRange()方法的目标选择逻辑
+   - 实现"最近敌人"选择机制，确保每个塔攻击离自己最近的目标
+   - 修复OnDetectCollider()中的攻击冷却时间控制
+   - 测试塔是否能正确选择并攻击最近的目标
+
+5. **子弹击中问题修复**
    - 修复Tower.cs中子弹速度设置为0的问题
    - 检查子弹碰撞检测和标签匹配
    - 测试子弹是否能正确击中敌人并造成伤害
@@ -349,6 +432,8 @@
 1. **功能正确性**
    - 敌人正确朝向中心塔移动 ✅ 已达成
    - 敌人正确选择攻击目标 ✅ 已达成
+   - 塔正确选择最近敌人作为目标 ❌ 需要修复
+   - 多个塔分别攻击不同目标 ❌ 需要修复
    - 所有子弹类型正常工作 ✅ 已达成
    - 攻击距离和频率配置统一且正确
 
@@ -375,10 +460,11 @@
 4. **攻击行为系统** - IAttackBehavior策略模式
 
 ### 🔄 需要完善的部分
-1. **攻击距离统一管理** - 需要AttackRangeManager
-2. **攻击频率统一管理** - 需要AttackCooldownManager
-3. **配置验证工具** - 需要编辑器工具
-4. **性能优化** - 对象查询缓存
+1. **塔索敌系统** - 需要修复目标选择逻辑和攻击冷却控制
+2. **攻击距离统一管理** - 需要AttackRangeManager
+3. **攻击频率统一管理** - 需要AttackCooldownManager
+4. **配置验证工具** - 需要编辑器工具
+5. **性能优化** - 对象查询缓存
 
 ### 📋 配置规则确认
 - **塔的攻击范围和频率**：配置在TowerData中
